--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,17 @@
     width: 100%;
     height: 800px;
 }
+.background-image {
+    background-image: url("images/hero.jpg"); /* The image used */
+    background-color: #cccccc; /* Used if the image is unavailable */
+    height: 500px; /* You must set a specified height */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+  }
+
+
+
 
 .topnav {
   overflow: hidden;
