--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
 }
-@media only screen and (min-width: 56em) {
-    
+@media only screen and (min-width: 56em) {    
 }
 .contentbox{
     background-color: #ccc;
@@ -17,21 +16,17 @@
     width: 100%;
     height: 800px;
 }
-<<<<<<< HEAD
-.background-image {
-    background-image: url("images/hero.jpg"); /* The image used */
-    background-color: #cccccc; /* Used if the image is unavailable */
-    height: 500px; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
+main h1 {
+    text-align: center;
+}
+  .background-image img {
+      width: 100%;
+      height: 100vh;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      overflow:hidden;
   }
-
-
-
-=======
->>>>>>> cc35b456e5197fe5621fc202de68861993da7d24
-
 .topnav {
   overflow: hidden;
   background-color: #333;
@@ -54,7 +49,7 @@
   font-size: 17px;
 }
 .topnav a:hover {
-  background-color: rgb(221, 221, 221);
+  background-color: greenyellow;
   color: black;
 }
 .topnav a.active {
@@ -97,6 +92,7 @@
     margin-bottom: 30px;
     font-weight: 500;
     position: absolute;
+    text-align: center;
 }
 .footer-col p {
     color: #fff;
